[tool.poetry]
name = "furretweet"
version = "0.1.0"
description = ""
authors = ["Pármenas Haniel <parmenashp@gmail.com>"]
license = "GNU Affero General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tweepy = "^4.13.0"
asyncpg = "^0.27.0"
loguru = "^0.6.0"
aiohttp = "^3.8.4"
async-lru = "^2.0.2"
oauthlib = "^3.2.2"
pydantic = "^1.10.6"
ujson = "^5.7.0"
pytelegrambotapi = "^4.10.0"
motor = "^3.1.1"
pymongo = "^4.3.3"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
freezegun = "^1.2.2"
pytest = "^7.3.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 99

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
